# PocketJournal

./: .gitignore  README.md  STEP10_SUMMARY.md  STEP11_SUMMARY.md  STEP12_SUMMARY.md  demo_step10.py  demo_step11.py  demo_step12.py  demo_step6.py  demo_step9.py  launch.bat  launch.ps1  pyproject.toml  requirements.txt  version.json
.github/: copilot-instructions.md
about/: changelog.md
docs/: STEP_5_COMPLETION.md  STEP_6_COMPLETION.md  STEP_9_COMPLETION.md  step4_system_tray.md
help/: files-exports.md  navigation-search.md  privacy.md  quick-start.md  settings.md  shortcuts.md  smart-formatting.md  troubleshooting.md
scripts/: build.py
src/pocket_journal/: __init__.py  __main__.py  app_meta.py  main.py  settings.py
src/pocket_journal/core/: __init__.py  autosave.py  global_hotkey.py  smart_formatting.py
src/pocket_journal/data/: __init__.py  entry_manager.py
src/pocket_journal/ops/: scan.py
src/pocket_journal/ui/: __init__.py  about_dialog.py  editor_panel.py  editor_panel_integrated.py  editor_panel_v2.py  entry_actions.py  formatting_toolbar.py  help_center.py  launcher_manager.py  micro_launcher.py  recent_and_search.py  settings_dialog.py  system_tray.py
src/pocket_journal/utils/: __init__.py  file_utils.py
tests/: __init__.py  conftest.py  test_app_meta_settings.py  test_editor_panel_v2.py  test_integrated_editor.py  test_main.py  test_micro_launcher.py  test_step10_settings_ui.py  test_step12_about_dialog.py  test_step6_autosave.py  test_step7_smart_formatting.py  test_step8_entry_actions.py  test_step9_recent_and_search.py  test_system_tray.py
